# Sentinel-Architect

./: README.md  architect.py  main.py  pyproject.toml
output/: Dockerfile  VALIDATION.md  docker-compose.yml  requirements.txt
